Adding header text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,17 @@ h2,
 h3{
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 }
+
+.section{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+/*
 p{
     border: 2px solid var(--primary-color);
-}
+}*/
 .sub-heading-color{
     color: var(--highlight-color);
 }
@@ -34,6 +41,10 @@ p{
 }
 #nav-bar .logo{
     width: 30px;
+}
+/*Header css*/
+#header.lead{
+    font-family: var(--secondary-font);
 }
 /*grid visualization css for testing
 .container,.row{
