complete new-game and favorite -game section in game-library page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,13 @@ p{
     border: 2px solid white;
     background-color: lightgrey;
 }*/
+/* Game library cards */
+
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
 /*media query for servieces card height setting*/
 @media screen and (min-width:768px) {
     #serviece .card-body{
