--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 
 /*google font import*/
+
 @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
 /*css variable*/
@@ -77,6 +78,32 @@ p{
 #new-games .card,
 #fav-games .card {
     border: none;
+}
+/* footer / Contact */
+#contact{
+    background-color: var(--primary-color);
+    color: white;
+    padding-bottom: 3rem;
+}
+#contact h2{
+    color: white;
+}
+#contact .sub-heading-color{
+    color: var(--highlight-color-light);
+    
+}
+#contact i{
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    margin-right: 15px;
+}
+#contact .social-links i{
+    color: var(--highlight-color-light);
+    font-size: 1.9rem;
+    transition: color 0.3s ease-in-out;
+}
+#contact .social-links i:hover{
+    color: var(--secondary-color);
 }
 
 /*media query for servieces card height setting*/
