--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 /*Global style*/
 body{
     font-family: var(--primary-font);
+    padding-top: 57.15px;/*push top of the header down under fixed nav-bar*/
 }
 /*Heading style*/
 h1,
@@ -33,8 +34,9 @@ h2{
 }
 
 .section{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem;
+   /* margin-top: 2rem;
+    margin-bottom: 2rem;*/
    
 }
 /*Buttons*/
@@ -56,6 +58,11 @@ h2{
 .custom-button-outline:hover{
     background-color: var(--highlight-color);
     color: white;
+}
+#reserve-button{
+    margin-bottom: 4%;
+    margin-top: 0%;
+    
 }
 /*
 p{
